--- a/CaffStore.Frontend/src/styles.css
+++ b/CaffStore.Frontend/src/styles.css
@@ -1,1 +1,81 @@
-/* You can add global styles to this file, and also import other style files */
+.form-element {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form-element label {
+    font: normal normal 600 18px/20px Roboto;
+    color: #787878;
+    margin-bottom: 10px;
+}
+
+.btn-primary {
+    background-color: #0276aa;
+    border-radius: 10px;
+    padding: 10px;
+    color: #FFFFFF;
+    font: normal normal 600 15px/18px Roboto;
+    border: none;
+    min-width: 120px;
+    width: fit-content;
+    cursor: pointer;
+}
+
+.btn-primary:hover {
+    background-color: #015e88;
+}
+
+.btn-primary:disabled {
+    background-color: #787878;
+    cursor: not-allowed;
+}
+
+.link {
+    font: normal normal 600 13px/15px Roboto;
+    color: #787878;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.link:hover {
+    color: #6b6b6b;
+}
+
+input {
+    border-radius: 5px;
+    border: 1px solid transparent;
+    height: 30px;
+    padding: 0 10px;
+    font: normal normal 600 13px/15px Roboto;
+    color: #787878;
+}
+
+input:focus {
+    border: 1px solid #015e88;
+}
+
+.panel {
+    border-radius: 15px;
+    background-color: rgba(53, 186, 246, 0.5);
+    width: 450px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    min-height: 480px;
+}
+
+.panel h2 {
+    font: normal normal 600 25px/27px Roboto;
+    color: #787878;
+    margin-bottom: 50px;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+}
