--- a/CaffStore.Frontend/src/app/profile/profile.component.html
+++ b/CaffStore.Frontend/src/app/profile/profile.component.html
@@ -1,1 +1,32 @@
-<p>profile works!</p>
+<div class="container">
+    <div class="panels-row" [formGroup]="form">
+        <div class="profile-panel">
+            <p>Personal data</p>
+            <div class="form-element">
+                <label for="lastname">Last name</label>
+                <input type="text" id="lastname" formControlName="lastName" />
+            </div>
+            <div class="form-element">
+                <label for="firstname">Last name</label>
+                <input type="text" id="firstname" formControlName="firstName" />
+            </div>
+        </div>
+        <div class="profile-panel">
+            <p>Login data</p>
+            <div class="form-element">
+                <label for="email">E-mail address</label>
+                <input type="email" id="email" formControlName="email" />
+            </div>
+            <div class="form-element">
+                <label for="password">Password</label>
+                <input type="password" id="password" formControlName="password" />
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <button class="btn-primary" *ngIf="!editingInProgress" style="background-color: red;" (click)="onDeleteAccount()">Delete account</button>
+        <button class="btn-primary" *ngIf="editingInProgress" style="background-color: #787878;" (click)="editingInProgress = false;">Cancel</button>
+        <button class="btn-primary" *ngIf="!editingInProgress" style="background-color: #35baf6;" (click)="editingInProgress = true;">Edit profile</button>
+        <button class="btn-primary" *ngIf="editingInProgress" style="background-color: #35baf6;" (click)="onSaveProfile()">Save changes</button>
+    </div>
+</div>
