--- a/CaffStore.Frontend/src/app/startpage/login/login.component.css
+++ b/CaffStore.Frontend/src/app/startpage/login/login.component.css
@@ -1,7 +1,12 @@
-
 .form-element {
     margin-bottom: 85px;
     width: 80%;
+}
+
+.form-element label {
+    font: normal normal 600 18px/20px Roboto;
+    color: #787878;
+    margin-bottom: 10px;
 }
 
 .btn-primary {
