--- a/CaffStore.Frontend/src/app/startpage/register/register.component.css
+++ b/CaffStore.Frontend/src/app/startpage/register/register.component.css
@@ -3,6 +3,12 @@
     width: 80%;
 }
 
+.form-element label {
+    font: normal normal 600 18px/20px Roboto;
+    color: #787878;
+    margin-bottom: 10px;
+}
+
 .btn-primary {
     margin-bottom: 25px;
     margin-top: 10px;
