--- a/CaffStore.Frontend/src/app/app.component.html
+++ b/CaffStore.Frontend/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-frame *ngIf="showFrame"></app-frame>
+<app-frame *ngIf="showFrame" [title]="title"></app-frame>
 <router-outlet ></router-outlet>
