--- a/CaffStore.Frontend/src/app/frame/frame.component.css
+++ b/CaffStore.Frontend/src/app/frame/frame.component.css
@@ -38,6 +38,19 @@ button {
 
 .menu {
     height: 60px;
+    width: 100%;
     background-color: #0276aa;
-    cursor: pointer;    
+    cursor: pointer;
+    margin-bottom: 2px;
+}
+
+.menu a {
+    height: 60px;
+    width: 100%;
+    display: inline-block;
+    text-decoration: none;
+    text-align: center;
+    font: normal normal bold 18px/20px Roboto;
+    line-height: 60px;
+    color: #FFFFFF;
 }
