--- a/CaffStore.Frontend/src/app/users/users.component.html
+++ b/CaffStore.Frontend/src/app/users/users.component.html
@@ -1,1 +1,5 @@
-<p>users works!</p>
+<div class="container">
+    <div class="user-container" *ngFor="let user of users;" (click)="onSelectUser(user.id)">
+        {{ user.fullName }}
+    </div>
+</div>
