--- a/CaffStore.Frontend/src/styles.css
+++ b/CaffStore.Frontend/src/styles.css
@@ -1,3 +1,9 @@
+.container {
+    max-width: 1440px;
+    width: 100%;
+    margin: 0 auto;
+}
+
 .form-element {
     display: flex;
     flex-direction: column;
