--- a/CaffStore.Frontend/src/app/profile/profile.component.html
+++ b/CaffStore.Frontend/src/app/profile/profile.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <div class="panels-row" [formGroup]="form">
-        <div class="profile-panel">
+    <div class="panels-row">
+        <div class="profile-panel" [formGroup]="profileDataForm">
             <p>Personal data</p>
             <div class="form-element">
                 <label for="lastname">Last name</label>
@@ -10,23 +10,30 @@
                 <label for="firstname">Last name</label>
                 <input type="text" id="firstname" formControlName="firstName" />
             </div>
+            <button class="btn-primary" *ngIf="editingInProgress" style="background-color: #787878;" (click)="onCancelEditing()">Cancel</button>
+            <button class="btn-primary" *ngIf="!editingInProgress" style="background-color: red;" (click)="onEditProfile()">Edit personal data</button>
+            <button class="btn-primary" *ngIf="editingInProgress" style="background-color: #35baf6;" (click)="onSaveProfile()">Save changes</button>
         </div>
-        <div class="profile-panel">
+        <div class="profile-panel" [formGroup]="passwordChangeForm">
             <p>Login data</p>
             <div class="form-element">
                 <label for="email">E-mail address</label>
-                <input type="email" id="email" formControlName="email" />
+                <input type="email" id="email" />
             </div>
             <div class="form-element">
-                <label for="password">Password</label>
-                <input type="password" id="password" formControlName="password" />
+                <label for="currentPassword">Current password</label>
+                <input type="password" id="currentPassword" formControlName="currentPassword" />
             </div>
+            <div class="form-element">
+                <label for="newPassword">New password</label>
+                <input type="password" id="newPassword" formControlName="newPassword" />
+            </div>
+            <button class="btn-primary" *ngIf="passwordChangeInProgress" style="background-color: #787878;" (click)="onCancelChangePassword()">Cancel</button>
+            <button class="btn-primary" *ngIf="!passwordChangeInProgress" style="background-color: red;" (click)="onChangePassword()">Change password</button>
+            <button class="btn-primary" *ngIf="passwordChangeInProgress" style="background-color: #35baf6;" (click)="onSavePassword()">Save password</button>
         </div>
     </div>
     <div class="row">
-        <button class="btn-primary" *ngIf="!editingInProgress" style="background-color: red;" (click)="onDeleteAccount()">Delete account</button>
-        <button class="btn-primary" *ngIf="editingInProgress" style="background-color: #787878;" (click)="editingInProgress = false;">Cancel</button>
-        <button class="btn-primary" *ngIf="!editingInProgress" style="background-color: #35baf6;" (click)="editingInProgress = true;">Edit profile</button>
-        <button class="btn-primary" *ngIf="editingInProgress" style="background-color: #35baf6;" (click)="onSaveProfile()">Save changes</button>
+        <button class="btn-primary" *ngIf="!editingInProgress && !passwordChangeInProgress" style="background-color: red;" (click)="onDeleteAccount()">Delete account</button>
     </div>
 </div>
