--- a/CaffStore.Frontend/src/app/profile/profile.component.css
+++ b/CaffStore.Frontend/src/app/profile/profile.component.css
@@ -15,7 +15,8 @@
     flex-direction: column;
     align-items: flex-start;
     padding: 20px;
-    min-height: 380px;
+    min-height: 500px;
+    position: relative;
 }
 
 .form-element {
@@ -34,12 +35,13 @@ p {
     font: normal normal 500 20px/25px Roboto;
 }
 
-.row {
-    margin-top: 50px;
-    width: 100%;
+.profile-panel .row {
+    width: 90%;
     padding: 0 15px;
     justify-content: space-between;
     box-sizing: border-box;
+    position: absolute;
+    bottom: 35px;
 }
 
 .btn-primary {
