--- a/CaffStore.Frontend/src/app/users/users.component.html
+++ b/CaffStore.Frontend/src/app/users/users.component.html
@@ -1,5 +1,10 @@
 <div class="container">
-    <div class="user-container" *ngFor="let user of users;" (click)="onSelectUser(user.id)">
-        {{ user.fullName }}
+    <div class="user-list-container">
+        <div class="user-container" *ngFor="let user of users;" (click)="onSelectUser(user.id)">
+            {{ user.fullName }}
+        </div>
+    </div>
+    <div class="row">
+        <a *ngIf="page < pageCount" (click)="onLoadMore()">Load more users</a>
     </div>
 </div>
