--- a/CaffStore.Frontend/src/app/frame/frame.component.html
+++ b/CaffStore.Frontend/src/app/frame/frame.component.html
@@ -14,7 +14,7 @@
     <div class="menu">
         <a routerLink="/profile">Profile</a>
     </div>
-    <!--TODO: csak admin lássa-->
+    <!--TODO: just for admin -->
     <div class="menu">
         <a routerLink="/users">Users</a>
     </div>
