--- a/CaffStore.Frontend/src/app/error-page/error-page.component.html
+++ b/CaffStore.Frontend/src/app/error-page/error-page.component.html
@@ -1,4 +1,4 @@
-<div>
-    <h1>Sorry but something went wrong.</h1>
-    <p>Please try another menu.</p>
+<div class="container">
+    <h1>Something went wrong.</h1>
+    <p>You probably tried to access a page that you have no access to. Please try another menu.</p>
 </div>
