--- a/CaffStore.Frontend/src/app/profile/profile.component.html
+++ b/CaffStore.Frontend/src/app/profile/profile.component.html
@@ -3,12 +3,12 @@
         <div class="profile-panel" [formGroup]="profileDataForm">
             <p>Personal data</p>
             <div class="form-element">
-                <label for="lastname">Last name</label>
-                <input type="text" id="lastname" formControlName="lastName" />
+                <label for="firstname">First name</label>
+                <input type="text" id="firstname" formControlName="firstName" />
             </div>
             <div class="form-element">
-                <label for="firstname">Last name</label>
-                <input type="text" id="firstname" formControlName="firstName" />
+                <label for="lastname">Last name</label>
+                <input type="text" id="lastname" formControlName="lastName" />
             </div>
             <div class="row">
                 <button class="btn-primary" *ngIf="!editingInProgress" style="background-color: #03a9f4;" (click)="onEditProfile()">Edit personal data</button>
@@ -20,7 +20,7 @@
             <p>Login data</p>
             <div class="form-element">
                 <label for="email">E-mail address</label>
-                <input type="email" id="email"  formControlName="email"/>
+                <input type="email" id="email"  formControlName="email" />
             </div>
             <div class="form-element">
                 <label for="currentPassword">Current password</label>
