--- a/CaffStore.Frontend/src/app/startpage/register/register.component.html
+++ b/CaffStore.Frontend/src/app/startpage/register/register.component.html
@@ -7,7 +7,7 @@
         </div>
         <div class="form-element">
             <label for="lastname">Last name</label>
-            <input type="text" id="lastname" formControlName="lastName" style="" />
+            <input type="text" id="lastname" formControlName="lastName" />
         </div>
     </div>
     <div class="form-element">
