--- a/CaffStore.Frontend/src/app/startpage/login/login.component.html
+++ b/CaffStore.Frontend/src/app/startpage/login/login.component.html
@@ -1,7 +1,7 @@
 <div [formGroup]="loginForm" class="panel">
     <h2>Sign in</h2>
     <div class="form-element">
-        <label for="email">E-mail</label>
+        <label for="email">AA E-mail</label>
         <input type="email" id="email" formControlName="email" />
     </div>
     <div class="form-element">
