--- a/CaffStore.Frontend/src/app/startpage/startpage.component.css
+++ b/CaffStore.Frontend/src/app/startpage/startpage.component.css
@@ -7,7 +7,7 @@
 }
 
 label {
-    font: normal normal 600 18px/20px Roboto;
+    font: normal normal 600 18px/20px Roboto, sans-serif;
     color: #787878;
     margin: 50px;
 }
