--- a/CaffStore.Frontend/src/styles.css
+++ b/CaffStore.Frontend/src/styles.css
@@ -15,7 +15,7 @@
     border-radius: 10px;
     padding: 10px;
     color: #FFFFFF;
-    font: normal normal 600 15px/18px Roboto;
+    font: normal normal 600 15px/18px Roboto, sans-serif;
     border: none;
     min-width: 120px;
     width: fit-content;
@@ -32,7 +32,7 @@
 }
 
 .link {
-    font: normal normal 600 13px/15px Roboto;
+    font: normal normal 600 13px/15px Roboto, sans-serif;
     color: #787878;
     text-decoration: none;
     cursor: pointer;
@@ -47,7 +47,7 @@ input {
     border: 2px solid transparent;
     height: 30px;
     padding: 0 10px;
-    font: normal normal 600 13px/15px Roboto;
+    font: normal normal 600 13px/15px Roboto, sans-serif;
     color: #787878;
 }
 
@@ -69,7 +69,7 @@ input:focus {
 }
 
 .panel h2 {
-    font: normal normal 600 25px/27px Roboto;
+    font: normal normal 600 25px/27px Roboto, sans-serif;
     color: #787878;
     margin-bottom: 50px;
 }
