--- a/CaffStore.Frontend/src/app/caff-list/caff-list.component.html
+++ b/CaffStore.Frontend/src/app/caff-list/caff-list.component.html
@@ -1,1 +1,11 @@
-<p>caff-list works!</p>
+<div class="container">
+    <div class="caff-list-container">
+        <mat-card *ngFor="let caff of caffs" class="example-card" (click)="onViewDetails(caff.id)">
+            <mat-card-header color="primary">
+              <mat-card-title>{{caff.title}}</mat-card-title>
+              <mat-card-subtitle>{{caff.createdBy.fullName}}</mat-card-subtitle>
+            </mat-card-header>
+            <img mat-card-image src="{{caff.previewFile.fileUri}}" alt="Photo of a Shiba Inu">
+        </mat-card>
+    </div>
+</div>
