--- a/CaffStore.Frontend/src/app/frame/frame.component.css
+++ b/CaffStore.Frontend/src/app/frame/frame.component.css
@@ -1,7 +1,7 @@
 .header {
     height: 80px;
     width: 100%;
-    background-color: #03a9f4;
+    background-color: var(--color-primary);
     margin-bottom: 40px;
 }
 
@@ -30,7 +30,7 @@ button {
 .menu-container {
     height: calc(100vh - 80px);
     width: 250px;
-    background-color: #03a9f4;
+    background-color: var(--color-primary);
     z-index: 150;
     position: absolute;
     top: 80px;
@@ -39,7 +39,7 @@ button {
 .menu {
     height: 60px;
     width: 100%;
-    background-color: #0276aa;
+    background-color: var(--color-primary-dark);
     cursor: pointer;
     margin-bottom: 2px;
 }
