--- a/CaffStore.Frontend/src/app/caff-details/caff-details.component.css
+++ b/CaffStore.Frontend/src/app/caff-details/caff-details.component.css
@@ -14,34 +14,46 @@
 
 img {
     border-radius: 10px;
-    max-height: 350px;
-  }
+    max-width: 450px;
+}
 
 .data-panel {
     border-radius: 10px;
-    background-color: var(--color-accent);
-    width: 45%;
+    width: 50%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 20px;
+    padding: 24px;
     min-height: 200px;
+}
+
+.form-row {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
 }
 
 .form-element {
     align-items: flex-start !important;
-    margin-bottom: 50px;
-    width: 100%;
+    margin-bottom: 16px;
+    width: 225px;
+    margin-right: 1em;
 }
 
 .form-element input {
-    width: 95%;
+    min-width: 225px;
 }
 
 p {
     margin: 0;
-    margin-bottom: 100px;
+    margin-bottom: 16px;
     font: normal normal 500 20px/25px Roboto, sans-serif;
+}
+
+label {
+    font: normal normal 400 11px/12px Roboto, sans-serif;
 }
 
 .caff-panel .row {
