--- a/CaffStore.Frontend/src/app/caff-details/caff-details.component.html
+++ b/CaffStore.Frontend/src/app/caff-details/caff-details.component.html
@@ -2,7 +2,7 @@
     <div class="panels-row">
         <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" >
         <div class="data-panel" [formGroup]="caffDataForm">
-            <p>CAFF data</p>
+            <p class="form-title">CAFF data</p>
             <div class="form-row">
                 <mat-form-field class="form-element">
                     <mat-label for="creator">Creator</mat-label>
@@ -24,8 +24,23 @@
                     <textarea matInput type="text" id="tags" formControlName="tags" ></textarea>
                 </mat-form-field>
             </div>
-           
-            
+
+            <div class="form-row">
+                <mat-form-field class="form-element">
+                    <mat-label for="size">Size</mat-label>
+                    <input matInput type="text" id="size" formControlName="size"/>
+                </mat-form-field>
+            </div>
+            <div class="form-row">
+                <mat-form-field class="form-element">
+                    <mat-label for="creationdate">Created at</mat-label>
+                    <input matInput type="text" id="creationdate" formControlName="creationdate"/>
+                </mat-form-field>
+                <mat-form-field class="form-element">
+                    <mat-label for="uploaddate">Uploaded at</mat-label>
+                    <input matInput type="text" id="uploaddate" formControlName="uploaddate" />
+                </mat-form-field>
+            </div>
            
             <div class="row">
                 <button mat-button *ngIf="!editingInProgress" style="background-color: #03a9f4;" (click)="onEditCaffData()">Edit</button>
