--- a/CaffStore.Frontend/src/app/caff-details/caff-details.component.html
+++ b/CaffStore.Frontend/src/app/caff-details/caff-details.component.html
@@ -16,8 +16,8 @@
 
             <div class="form-row">
                 <mat-form-field class="form-element">
-                    <mat-label for="description">Description</mat-label>
-                    <textarea matInput type="text" id="description" formControlName="description"></textarea>
+                    <mat-label for="size">Size</mat-label>
+                    <input matInput type="text" id="size" formControlName="size"/>
                 </mat-form-field>
                 <mat-form-field class="form-element">
                     <mat-label for="tags">Tags</mat-label>
@@ -26,9 +26,9 @@
             </div>
 
             <div class="form-row">
-                <mat-form-field class="form-element">
-                    <mat-label for="size">Size</mat-label>
-                    <input matInput type="text" id="size" formControlName="size"/>
+                <mat-form-field class="form-element-long">
+                    <mat-label for="description">Description</mat-label>
+                    <textarea matInput type="text" id="description" formControlName="description"></textarea>
                 </mat-form-field>
             </div>
             <div class="form-row">
