--- a/CaffStore.Frontend/src/app/caff-details/caff-details.component.css
+++ b/CaffStore.Frontend/src/app/caff-details/caff-details.component.css
@@ -54,6 +54,20 @@ img {
     font: normal normal 400 13px/14px Roboto, sans-serif;
 }
 
+.form-element-long textarea {
+    min-width: 225px;
+    padding: 0px !important;
+    font: normal normal 400 13px/14px Roboto, sans-serif;
+}
+
+.form-element-long{
+    align-items: flex-start !important;
+    margin-bottom: 8px;
+    width: 100%;
+    margin-right: 1em;
+    padding: 0px !important;
+}
+
 .form-title {
     margin: 0;
     margin-bottom: 10px;
