--- a/CaffStore.Frontend/src/app/caff-details/caff-details.component.css
+++ b/CaffStore.Frontend/src/app/caff-details/caff-details.component.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .row {
@@ -12,9 +12,64 @@
     justify-content: space-between;
 }
 
-img {
+.comment-section {
+    display: flex;
+    flex-direction: column;
+    width: 95%;
+    background-color: var(--color-accent);
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 16px;
+    padding: 1em;
+}
+
+.comment-header {
+    display: flex;
+    justify-content: space-between;
+}
+
+::ng-deep .mat-icon-button {
+    height: 26px !important;
+    width: 26px !important;
+    line-height:26px !important;
+}
+
+::ng-deep .mat-icon{
+    height: 20px !important;
+    width: 20px !important;
+    color: red;
+    font-size:20px !important;
+}
+
+.comment-row {
+    display: flex;
+    flex-direction: column;
+    width: 98%;
+    background-color: white;
+    justify-content: space-evenly;
+    margin: 8px;
     border-radius: 10px;
-    max-width: 500px;
+    padding: 4px !important;
+}
+
+.mat-card-title {
+    font: normal normal 400 14px/18px Roboto, sans-serif;
+    margin: 4px !important;
+    margin-left: 0px !important;
+}
+
+.comment-text {
+    font: normal normal 400 11px/12px Roboto, sans-serif;
+    padding: 8px;
+    padding-left: 16px;
+}
+
+img {
+    margin-left: 16px;
+    max-width: 600px;
+    min-width: 400px;
+    width: 50%;
+    margin-right: 16px;
 }
 
 .data-panel {
@@ -24,6 +79,7 @@ img {
     flex-direction: column;
     align-items: flex-start;
     min-height: 200px;
+    margin-right: 16px;
 }
 
 .form-row {
