--- a/CaffStore.Frontend/src/app/caff-details/caff-details.component.html
+++ b/CaffStore.Frontend/src/app/caff-details/caff-details.component.html
@@ -1,55 +1,238 @@
 <div class="container">
-    <div class="panels-row">
-        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" >
-        <div class="data-panel" [formGroup]="caffDataForm">
-            <p class="form-title">CAFF data</p>
-            <div class="form-row">
-                <mat-form-field class="form-element">
-                    <mat-label for="creator">Creator</mat-label>
-                    <input matInput type="text" id="creator" formControlName="creator"/>
-                </mat-form-field>
-                <mat-form-field class="form-element">
-                    <mat-label for="title">Title</mat-label>
-                    <input matInput type="text" id="title" formControlName="title"/>
-                </mat-form-field>
-            </div>
+  <div class="panels-row">
+    <img
+      mat-card-image
+      src="https://material.angular.io/assets/img/examples/shiba2.jpg"
+    />
+    <div class="data-panel" [formGroup]="caffDataForm">
+      <p class="form-title">CAFF data</p>
+      <div class="form-row">
+        <mat-form-field class="form-element">
+          <mat-label for="creator">Creator</mat-label>
+          <input matInput type="text" id="creator" formControlName="creator" />
+        </mat-form-field>
+        <mat-form-field class="form-element">
+          <mat-label for="title">Title</mat-label>
+          <input matInput type="text" id="title" formControlName="title" />
+        </mat-form-field>
+      </div>
 
-            <div class="form-row">
-                <mat-form-field class="form-element">
-                    <mat-label for="size">Size</mat-label>
-                    <input matInput type="text" id="size" formControlName="size"/>
-                </mat-form-field>
-                <mat-form-field class="form-element">
-                    <mat-label for="tags">Tags</mat-label>
-                    <textarea matInput type="text" id="tags" formControlName="tags" ></textarea>
-                </mat-form-field>
-            </div>
+      <div class="form-row">
+        <mat-form-field class="form-element">
+          <mat-label for="size">Size</mat-label>
+          <input matInput type="text" id="size" formControlName="size" />
+        </mat-form-field>
+        <mat-form-field class="form-element">
+          <mat-label for="tags">Tags</mat-label>
+          <textarea
+            matInput
+            type="text"
+            id="tags"
+            formControlName="tags"
+          ></textarea>
+        </mat-form-field>
+      </div>
 
-            <div class="form-row">
-                <mat-form-field class="form-element-long">
-                    <mat-label for="description">Description</mat-label>
-                    <textarea matInput type="text" id="description" formControlName="description"></textarea>
-                </mat-form-field>
-            </div>
-            <div class="form-row">
-                <mat-form-field class="form-element">
-                    <mat-label for="creationdate">Created at</mat-label>
-                    <input matInput type="text" id="creationdate" formControlName="creationdate"/>
-                </mat-form-field>
-                <mat-form-field class="form-element">
-                    <mat-label for="uploaddate">Uploaded at</mat-label>
-                    <input matInput type="text" id="uploaddate" formControlName="uploaddate" />
-                </mat-form-field>
-            </div>
-           
-            <div class="row">
-                <button mat-button *ngIf="!editingInProgress" style="background-color: #03a9f4;" (click)="onEditCaffData()">Edit</button>
-                <button mat-button *ngIf="editingInProgress" style="background-color: #B0B0B0;" (click)="onCancelEditing()">Cancel</button>
-                <button mat-button *ngIf="editingInProgress" [disabled]="!caffDataForm.valid" style="background-color: #03a9f4;" (click)="onSaveChanges()">Save changes</button>
-            </div>
-        </div>
+      <div class="form-row">
+        <mat-form-field class="form-element-long">
+          <mat-label for="description">Description</mat-label>
+          <textarea
+            matInput
+            type="text"
+            id="description"
+            formControlName="description"
+          ></textarea>
+        </mat-form-field>
+      </div>
+      <div class="form-row">
+        <mat-form-field class="form-element">
+          <mat-label for="creationdate">Created at</mat-label>
+          <input
+            matInput
+            type="text"
+            id="creationdate"
+            formControlName="creationdate"
+          />
+        </mat-form-field>
+        <mat-form-field class="form-element">
+          <mat-label for="uploaddate">Uploaded at</mat-label>
+          <input
+            matInput
+            type="text"
+            id="uploaddate"
+            formControlName="uploaddate"
+          />
+        </mat-form-field>
+      </div>
+
+      <div class="row">
+        <button
+          mat-button
+          *ngIf="!editingInProgress"
+          style="background-color: #03a9f4"
+          (click)="onEditCaffData()"
+          matTooltip="Edit CAFF file data"
+        >
+          Edit
+        </button>
+        <button
+          matTooltip="Delete this CAFF file"
+          *ngIf="!editingInProgress"
+          mat-button
+          style="background-color: red"
+        >
+          Delete CAFF
+        </button>
+        <button
+          mat-button
+          *ngIf="editingInProgress"
+          style="background-color: #b0b0b0"
+          (click)="onCancelEditing()"
+          matTooltip="Cancel"
+        >
+          Cancel
+        </button>
+        <button
+          mat-button
+          *ngIf="editingInProgress"
+          [disabled]="!caffDataForm.valid"
+          style="background-color: #03a9f4"
+          (click)="onSaveChanges()"
+          matTooltip="Save changes"
+        >
+          Save changes
+        </button>
+      </div>
     </div>
-    <div class="row" style="margin-top: 20px; padding: 0 15px; width: 100%; box-sizing: border-box;">
-        <button class="btn-primary" style="background-color: red;" >Delete CAFF</button>
-    </div>
+  </div>
+
+  <div class="comment-section">
+    <mat-card class="comment-row">
+      <mat-card-header class="comment-header">
+        <mat-card-title class="comment-label">User name</mat-card-title>
+        <button
+          matTooltip="Delete this comment"
+          mat-icon-button
+          aria-label="Delete comment button"
+        >
+          <mat-icon>clear</mat-icon>
+        </button>
+      </mat-card-header>
+      <mat-card-content class="comment-text">
+        <p>
+          The Shiba Inu is the smallest of the six original and distinct spitz
+          breeds of dog from Japan. A small, agile dog that copes very well with
+          mountainous terrain, the Shiba Inu was originally bred for hunting.
+        </p>
+      </mat-card-content>
+    </mat-card>
+    <mat-card class="comment-row">
+      <mat-card-header>
+        <mat-card-title class="comment-label">User name</mat-card-title>
+      </mat-card-header>
+      <mat-card-content class="comment-text">
+        <p>
+          The Shiba Inu is the smallest of the six original and distinct spitz
+          breeds of dog from Japan. A small, agile dog that copes very well with
+          mountainous terrain, the Shiba Inu was originally bred for hunting.
+        </p>
+      </mat-card-content>
+    </mat-card>
+    <mat-card class="comment-row">
+      <mat-card-header>
+        <mat-card-title class="comment-label">User name</mat-card-title>
+      </mat-card-header>
+      <mat-card-content class="comment-text">
+        <p>
+          The Shiba Inu is the smallest of the six original and distinct spitz
+          breeds of dog from Japan. A small, agile dog that copes very well with
+          mountainous terrain, the Shiba Inu was originally bred for hunting.
+        </p>
+      </mat-card-content>
+    </mat-card>
+    <mat-card class="comment-row">
+      <mat-card-header>
+        <mat-card-title class="comment-label">User name</mat-card-title>
+      </mat-card-header>
+      <mat-card-content class="comment-text">
+        <p>
+          The Shiba Inu is the smallest of the six original and distinct spitz
+          breeds of dog from Japan. A small, agile dog that copes very well with
+          mountainous terrain, the Shiba Inu was originally bred for hunting.
+        </p>
+      </mat-card-content>
+    </mat-card>
+    <mat-card class="comment-row">
+      <mat-card-header>
+        <mat-card-title class="comment-label">User name</mat-card-title>
+      </mat-card-header>
+      <mat-card-content class="comment-text">
+        <p>
+          The Shiba Inu is the smallest of the six original and distinct spitz
+          breeds of dog from Japan. A small, agile dog that copes very well with
+          mountainous terrain, the Shiba Inu was originally bred for hunting.
+        </p>
+      </mat-card-content>
+    </mat-card>
+    <mat-card class="comment-row">
+      <mat-card-header>
+        <mat-card-title class="comment-label">User name</mat-card-title>
+      </mat-card-header>
+      <mat-card-content class="comment-text">
+        <p>
+          The Shiba Inu is the smallest of the six original and distinct spitz
+          breeds of dog from Japan. A small, agile dog that copes very well with
+          mountainous terrain, the Shiba Inu was originally bred for hunting.
+        </p>
+      </mat-card-content>
+    </mat-card>
+    <mat-card class="comment-row">
+      <mat-card-header>
+        <mat-card-title class="comment-label">User name</mat-card-title>
+      </mat-card-header>
+      <mat-card-content class="comment-text">
+        <p>
+          The Shiba Inu is the smallest of the six original and distinct spitz
+          breeds of dog from Japan. A small, agile dog that copes very well with
+          mountainous terrain, the Shiba Inu was originally bred for hunting.
+        </p>
+      </mat-card-content>
+    </mat-card>
+    <mat-card class="comment-row">
+      <mat-card-header>
+        <mat-card-title class="comment-label">User name</mat-card-title>
+      </mat-card-header>
+      <mat-card-content class="comment-text">
+        <p>
+          The Shiba Inu is the smallest of the six original and distinct spitz
+          breeds of dog from Japan. A small, agile dog that copes very well with
+          mountainous terrain, the Shiba Inu was originally bred for hunting.
+        </p>
+      </mat-card-content>
+    </mat-card>
+    <mat-card class="comment-row">
+      <mat-card-header>
+        <mat-card-title class="comment-label">User name</mat-card-title>
+      </mat-card-header>
+      <mat-card-content class="comment-text">
+        <p>
+          The Shiba Inu is the smallest of the six original and distinct spitz
+          breeds of dog from Japan. A small, agile dog that copes very well with
+          mountainous terrain, the Shiba Inu was originally bred for hunting.
+        </p>
+      </mat-card-content>
+    </mat-card>
+    <mat-card class="comment-row">
+      <mat-card-header>
+        <mat-card-title class="comment-label">User name</mat-card-title>
+      </mat-card-header>
+      <mat-card-content class="comment-text">
+        <p>
+          The Shiba Inu is the smallest of the six original and distinct spitz
+          breeds of dog from Japan. A small, agile dog that copes very well with
+          mountainous terrain, the Shiba Inu was originally bred for hunting.
+        </p>
+      </mat-card-content>
+    </mat-card>
+  </div>
 </div>
