--- a/CaffStore.Frontend/src/app/caff-details/caff-details.component.css
+++ b/CaffStore.Frontend/src/app/caff-details/caff-details.component.css
@@ -9,7 +9,17 @@
 .row {
     display: flex;
     flex-direction: row;
+    align-items: flex-start;
     justify-content: space-between;
+    margin-bottom: 8px;
+}
+.edit-download {
+    display: flex;
+    align-self: start;
+    flex-direction: row;
+    width: 30%;
+    justify-content: space-between;
+    margin-bottom: 8px;
 }
 
 .comment-section {
