--- a/CaffStore.Frontend/src/app/caff-details/caff-details.component.css
+++ b/CaffStore.Frontend/src/app/caff-details/caff-details.component.css
@@ -12,12 +12,14 @@
     align-items: flex-start;
     justify-content: space-between;
     margin-bottom: 8px;
+    margin-top: 48px;
 }
 .edit-download {
     display: flex;
     align-self: start;
     flex-direction: row;
     width: 30%;
+    min-width: 180px;
     justify-content: space-between;
     margin-bottom: 8px;
 }
@@ -120,24 +122,20 @@ img {
     margin-bottom: 8px;
     width: 225px;
     margin-right: 1em;
-    padding: 0px !important;
 }
 
 .form-element input {
     min-width: 225px;
-    padding: 0px !important;
     font: normal normal 400 13px/14px Roboto, sans-serif;
 }
 
 .form-element textarea {
     min-width: 225px;
-    padding: 0px !important;
     font: normal normal 400 13px/14px Roboto, sans-serif;
 }
 
 .form-element-long textarea {
     min-width: 225px;
-    padding: 0px !important;
     font: normal normal 400 13px/14px Roboto, sans-serif;
 }
 
@@ -146,29 +144,10 @@ img {
     margin-bottom: 8px;
     width: 100%;
     margin-right: 1em;
-    padding: 0px !important;
 }
 
 .form-title {
     margin: 0;
     margin-bottom: 10px;
     font: normal normal 500 18px/22px Roboto, sans-serif;
-}
-
-label {
-    font: normal normal 400 11px/12px Roboto, sans-serif;
-}
-
-.caff-panel .row {
-    width: 90%;
-    padding: 0 15px;
-    justify-content: space-between;
-    box-sizing: border-box;
-    position: absolute;
-    bottom: 35px;
-}
-
-.btn-primary {
-    padding: 15px !important;
-    min-width: 150px;
 }
