--- a/CaffStore.Frontend/src/app/caff-list/caff-list.component.html
+++ b/CaffStore.Frontend/src/app/caff-list/caff-list.component.html
@@ -1,11 +1,18 @@
 <div class="container">
-    <div class="caff-list-container">
-        <mat-card *ngFor="let caff of caffs" class="example-card" (click)="onViewDetails(caff.id)">
-            <mat-card-header color="primary">
-              <mat-card-title>{{caff.title}}</mat-card-title>
-              <mat-card-subtitle>{{caff.createdBy.fullName}}</mat-card-subtitle>
-            </mat-card-header>
-            <img mat-card-image src="{{caff.previewFile.fileUri}}" alt="Photo of a Shiba Inu">
-        </mat-card>
-    </div>
+        <div class="caff-list-container">
+            <div class="caff-list">
+                <mat-card *ngFor="let caff of caffs" class="example-card" (click)="onViewDetails(caff.id)">
+                    <mat-card-header color="primary">
+                      <mat-card-title class="example-card-title">{{caff.title}}</mat-card-title>
+                    </mat-card-header>
+                    <img mat-card-image src="{{caff.previewFile.fileUri}}" alt="Photo of a Shiba Inu">
+                </mat-card>
+                
+            </div>
+            <div class="fab-container">
+                <button matTooltip="Add new CAFF" mat-fab color="primary" aria-label="Add new Caff">
+                  <mat-icon>add</mat-icon>
+                </button>
+            </div>
+        </div>
 </div>
