--- a/CaffStore.Frontend/src/app/caff-details/caff-details.component.html
+++ b/CaffStore.Frontend/src/app/caff-details/caff-details.component.html
@@ -135,6 +135,7 @@
         mat-icon-button
         (click)="onSendComment()"
         aria-label="Send new comment"
+        [disabled]="!newCommentForm.valid"
       >
         <mat-icon>send</mat-icon>
       </button>
