build fix, delete account, admin user operations

--- a/CaffStore.Frontend/src/app/frame/frame.component.html
+++ b/CaffStore.Frontend/src/app/frame/frame.component.html
@@ -14,8 +14,7 @@
     <div class="menu">
         <a routerLink="/profile">Profile</a>
     </div>
-    <!--TODO: just for admin -->
-    <div class="menu">
+    <div class="menu" *ngIf="isAdmin">
         <a routerLink="/users">Users</a>
     </div>
     <div class="menu">
