--- a/CaffStore.Frontend/src/app/caff-details/caff-details.component.html
+++ b/CaffStore.Frontend/src/app/caff-details/caff-details.component.html
@@ -62,11 +62,32 @@
         </mat-form-field>
       </div>
 
+      <div class="form-row">
+        <mat-form-field class="form-element disabled">
+          <mat-label for="uploadername">Uploader name</mat-label>
+          <input
+            matInput
+            type="text"
+            id="uploadername"
+            formControlName="uploadername"
+          />
+        </mat-form-field>
+        <mat-form-field class="form-element disabled">
+          <mat-label for="uploaderemail">Uploader email</mat-label>
+          <input
+            matInput
+            type="text"
+            id="uploaderemail"
+            formControlName="uploaderemail"
+          />
+        </mat-form-field>
+      </div>
+
       <div class="row">
         <div class="edit-download" *ngIf="!editingInProgress">
           <button
           mat-button
-          *ngIf="!editingInProgress"
+          *ngIf="!editingInProgress && (isAdmin || isOwnerOfCaff)"
           style="background-color: #03a9f4"
           (click)="onEditCaffData()"
           matTooltip="Edit CAFF file data"
@@ -87,7 +108,7 @@
 
         <button
           matTooltip="Delete this CAFF file"
-          *ngIf="!editingInProgress"
+          *ngIf="!editingInProgress && (isAdmin || isOwnerOfCaff)"
           mat-button
           (click)="onDeleteCaff()"
           style="background-color: red"
@@ -150,6 +171,7 @@
           mat-icon-button
           (click)="onDeleteComment(comment.id)"
           aria-label="Delete comment button"
+          *ngIf="comment.createdBy.email===userEmail"
         >
           <mat-icon class="delete-icon">clear</mat-icon>
         </button>
