--- a/CaffStore.Frontend/src/app/startpage/startpage.component.html
+++ b/CaffStore.Frontend/src/app/startpage/startpage.component.html
@@ -1,5 +1,5 @@
 <div class="container">
     <app-login></app-login>
     <label>or</label>
-    <app-register></app-register>
+    <app-register class="registration"></app-register>
 </div>
