--- a/CaffStore.Frontend/src/app/profile/profile.component.css
+++ b/CaffStore.Frontend/src/app/profile/profile.component.css
@@ -48,3 +48,15 @@ p {
     padding: 15px !important;
     min-width: 150px;
 }
+
+
+@media screen and (max-width: 880px) {
+    .panels-row {
+        flex-direction: column;
+        align-items: center;
+    }
+    .profile-panel {
+        margin-top: 10px;
+        width: 80%;
+    }
+}
