--- a/CaffStore.Frontend/src/app/startpage/startpage.component.css
+++ b/CaffStore.Frontend/src/app/startpage/startpage.component.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
+    flex-wrap: wrap;
     justify-content: center;
     padding-top: 40px;
 }
@@ -9,5 +10,18 @@
 label {
     font: normal normal 600 18px/20px Roboto, sans-serif;
     color: #787878;
-    margin: 50px;
+    margin: 40px;
+}
+
+@media screen and (max-width: 1060px) {
+    .container {
+        flex-direction: column;
+        align-items: center;
+    }
+    .registration {
+        margin-top: 20px;
+    }
+    label {
+        margin: 25px auto;
+    }
 }
